fixed toggle switch header text wrapping

--- a/src/common/components/ToggleSwitchExpandableInput.scss
+++ b/src/common/components/ToggleSwitchExpandableInput.scss
@@ -13,6 +13,7 @@
 	padding-top: 2px;
 	display: flex;
 	align-items: center;
+	flex-wrap: wrap;
 }
 .toggle-switch-expandable-input_i54wnk> .controls > .header > label {
 	margin-left: 5px;
